# computadoras_y_sistemas_de_control

./: .gitignore  README.md
actividades/actividad_1/: CMakeLists.txt  Makefile  README.md  diagram.json  main.c
actividades/actividad_1/libs/: CMakeLists.txt
actividades/actividad_2/: CMakeLists.txt  README.md  main.c
actividades/actividad_2/libs/: init.c  lcd_i2c.c
actividades/actividad_2/libs/inc/: control.h  init.h  lcd_i2c.h
